--- a/index.html
+++ b/index.html
@@ -782,10 +782,10 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
             <h2 class="mb-4">Contact Me</h2>
-            <p>
+            <!-- <p>
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia
-            </p>
+            </p> -->
           </div>
         </div>
 
@@ -835,7 +835,9 @@
                 <span class="icon-globe"></span>
               </div>
               <h3 class="mb-4">Website</h3>
-              <p><a href="#">yelinnhtet.github.io</a></p>
+              <p>
+                <a href="https://yelinnhtet.github.io/">yelinnhtet.github.io</a>
+              </p>
             </div>
           </div>
         </div>
@@ -897,20 +899,35 @@
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
               <p>
-                Far far away, behind the word mountains, far from the countries
-                Vokalia and Consonantia, there live the blind texts.
+                Innovative and hardworking developer with four years above of
+                extensive hand on experience in designing and developing web
+                applications from initial to final deliverable. Love learning
+                new technologies and a quick learner. An experienced team player
+                with excellent communication, interpersonal skills, and ability
+                to work independently under pressure.
               </p>
               <ul
                 class="ftco-footer-social list-unstyled float-md-left float-lft mt-5"
               >
                 <li class="ftco-animate">
-                  <a href="#"><span class="icon-linkedin"></span></a>
+                  <a href="https://www.facebook.com/yelinnhtet.me"
+                    ><span class="icon-facebook"></span
+                  ></a>
                 </li>
                 <li class="ftco-animate">
-                  <a href="#"><span class="icon-github"></span></a>
+                  <a href="https://www.linkedin.com/in/ye-linn-htet"
+                    ><span class="icon-linkedin"></span
+                  ></a>
                 </li>
                 <li class="ftco-animate">
-                  <a href="#"><span class="icon-whatsapp"></span></a>
+                  <a href="https://yelinnhtet.github.io/"
+                    ><span class="icon-github"></span
+                  ></a>
+                </li>
+                <li class="ftco-animate">
+                  <a href="https://web.whatsapp.com/"
+                    ><span class="icon-whatsapp"></span
+                  ></a>
                 </li>
               </ul>
             </div>
@@ -973,17 +990,19 @@
               <div class="block-23 mb-3">
                 <ul>
                   <li>
-                    <span class="icon icon-map-marker"></span
-                    ><span class="text">Yangon, Myanmar</span>
+                    <a href="https://www.google.com/maps/@16.8311437,96.1845218,15z?entry=ttu">
+                      <span class="icon icon-map-marker"></span
+                      ><span class="text">Yangon, Myanmar</span></a
+                    >
                   </li>
                   <li>
-                    <a href="#"
+                    <a href="tel://959252482969"
                       ><span class="icon icon-phone"></span
                       ><span class="text">+959 252 482 969</span></a
                     >
                   </li>
                   <li>
-                    <a href="#"
+                    <a href="mailto:yelinnhtet9598@gmail.com"
                       ><span class="icon icon-envelope"></span
                       ><span class="text">yelinnhtet9598@gmail.com</span></a
                     >
