--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             >
               <div
                 class="one-third js-fullheight order-md-last img"
-                style="background-image: url(images/bg_1.png)"
+                style="background-image: url(images/mypic1.png)"
               >
                 <div class="overlay"></div>
               </div>
@@ -129,7 +129,7 @@
             >
               <div
                 class="one-third js-fullheight order-md-last img"
-                style="background-image: url(images/bg_2.png)"
+                style="background-image: url(images/mypic1.png)"
               >
                 <div class="overlay"></div>
               </div>
@@ -166,7 +166,7 @@
               <div class="overlay"></div>
               <div
                 class="img d-flex align-self-stretch align-items-center"
-                style="background-image: url(images/bg_1.png)"
+                style="background-image: url(images/mypic1.png)"
               ></div>
             </div>
           </div>
@@ -176,12 +176,12 @@
                 <h1 class="big">About</h1>
                 <h2 class="mb-4">About Me</h2>
                 <p>
-                  Innovative and hardworking developer with four years above of
+                  Innovative and hardworking developer with five years of
                   extensive hand on experience in designing and developing web
                   applications from initial to final deliverable. Love learning
                   new technologies and a quick learner. An experienced team
                   player with excellent communication, interpersonal skills, and
-                  ability to work independently under pressure.
+                  ability to work independently and under pressure.
                 </p>
                 <ul class="about-info mt-4 px-md-0 px-2">
                   <li class="d-flex">
@@ -210,7 +210,7 @@
                 </p>
                 <p>
                   <a
-                    href="images/resume/Ye Linn Htet-Web Developer.pdf"
+                    href="images/resume/YE LINN HTET-Web Developer.docx"
                     class="btn btn-primary py-3 px-3"
                     >Download CV</a
                   >
@@ -233,45 +233,6 @@
         </div>
       </div>
     </section>
-
-    <!-- <section class="ftco-section ftco-no-pb" id="resume-section">
-      <div class="container">
-        <div class="row justify-content-center pb-5">
-          <div class="col-md-10 heading-section text-center ftco-animate">
-            <h1 class="big big-2">Resume</h1>
-            <h2 class="mb-4">Resume</h2>
-            <p>
-              A small river named Duden flows by their place and supplies it
-              with the necessary regelialia. It is a paradisematic country, in
-              which roasted parts of sentences fly into your mouth.
-            </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="resume-wrap text-center ftco-animate">
-              <span class="date">DEC 2012 - NOV 2017</span>
-              <h2>Bachelor of Computer Science</h2>
-              <span class="position"
-                >University of Computer Studies, Magway - Myanmar</span
-              >
-              <p class="mt-4">Completed in Nov 2017</p>
-            </div>
-          </div>
-        </div>
-        <div class="row justify-content-center mt-5">
-          <div class="col-md-6 text-center ftco-animate">
-            <p>
-              <a
-                href="images/resume/Ye Linn Htet-Web Developer.pdf"
-                class="btn btn-primary py-4 px-5"
-                >Download CV</a
-              >
-            </p>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
     <!-- <section class="ftco-section" id="services-section">
       <div class="container">
@@ -358,7 +319,7 @@
             <h1 class="big big-2">Skills</h1>
             <h2 class="mb-4">My Skills</h2>
             <p>
-              Took responsibilities for both frontend and backend development
+              Took responsibilities for both frontend and backend development.
             </p>
           </div>
         </div>
@@ -400,6 +361,23 @@
           <div class="col-md-6 animate-box">
             <div class="progress-wrap ftco-animate">
               <h3>C# .Net Core</h3>
+              <div class="progress">
+                <div
+                  class="progress-bar color-1"
+                  role="progressbar"
+                  aria-valuenow="75"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 75%"
+                >
+                  <span>75%</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 animate-box">
+            <div class="progress-wrap ftco-animate">
+              <h3>Entity Framework</h3>
               <div class="progress">
                 <div
                   class="progress-bar color-1"
@@ -484,6 +462,40 @@
           </div>
           <div class="col-md-6 animate-box">
             <div class="progress-wrap ftco-animate">
+              <h3>Vue Js</h3>
+              <div class="progress">
+                <div
+                  class="progress-bar color-5"
+                  role="progressbar"
+                  aria-valuenow="60"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 60%"
+                >
+                  <span>60%</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 animate-box">
+            <div class="progress-wrap ftco-animate">
+              <h3>Laravel</h3>
+              <div class="progress">
+                <div
+                  class="progress-bar color-5"
+                  role="progressbar"
+                  aria-valuenow="60"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 60%"
+                >
+                  <span>60%</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 animate-box">
+            <div class="progress-wrap ftco-animate">
               <h3>MySQL</h3>
               <div class="progress">
                 <div
@@ -499,6 +511,23 @@
               </div>
             </div>
           </div>
+          <div class="col-md-6 animate-box">
+            <div class="progress-wrap ftco-animate">
+              <h3>Microsoft SQL</h3>
+              <div class="progress">
+                <div
+                  class="progress-bar color-6"
+                  role="progressbar"
+                  aria-valuenow="70"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 70%"
+                >
+                  <span>70%</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -510,8 +539,10 @@
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Our Projects</h2>
             <p>
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia
+              I have developed many types of enterprise projects such as Online
+              Business License Registration and Administration System, Household
+              Management System, Housing Management System, Property Taxation
+              System, Municipal Mobile App API and RCEP Mall.
             </p>
           </div>
         </div>
@@ -519,24 +550,24 @@
           <div class="col-md-4">
             <div
               class="project img ftco-animate d-flex justify-content-center align-items-center"
-              style="background-image: url(images/project-4.jpg)"
+              style="background-image: url(images/biz-license-administration.PNG)"
             >
               <div class="overlay"></div>
               <div class="text text-center p-4">
-                <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-                <span>Web Design</span>
+                <h3><a href="#">Business License Administration System</a></h3>
+                <span>Web Application</span>
               </div>
             </div>
           </div>
           <div class="col-md-8">
             <div
               class="project img ftco-animate d-flex justify-content-center align-items-center"
-              style="background-image: url(images/project-5.jpg)"
+              style="background-image: url(images/biz-license-registration.PNG)"
             >
               <div class="overlay"></div>
               <div class="text text-center p-4">
-                <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-                <span>Web Design</span>
+                <h3><a href="#">Business License Registration System</a></h3>
+                <span>Web Application</span>
               </div>
             </div>
           </div>
@@ -544,23 +575,23 @@
           <div class="col-md-8">
             <div
               class="project img ftco-animate d-flex justify-content-center align-items-center"
-              style="background-image: url(images/project-1.jpg)"
+              style="background-image: url(images/household.PNG)"
             >
               <div class="overlay"></div>
               <div class="text text-center p-4">
-                <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-                <span>Web Design</span>
+                <h3><a href="#">Household Management System</a></h3>
+                <span>Web Application</span>
               </div>
             </div>
 
             <div
               class="project img ftco-animate d-flex justify-content-center align-items-center"
-              style="background-image: url(images/project-6.jpg)"
+              style="background-image: url(images/housing.PNG)"
             >
               <div class="overlay"></div>
               <div class="text text-center p-4">
-                <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-                <span>Web Design</span>
+                <h3><a href="#">Housing Management System</a></h3>
+                <span>Web Application</span>
               </div>
             </div>
           </div>
@@ -569,24 +600,24 @@
               <div class="col-md-12">
                 <div
                   class="project img ftco-animate d-flex justify-content-center align-items-center"
-                  style="background-image: url(images/project-2.jpg)"
+                  style="background-image: url(images/ycdc-logo.png)"
                 >
                   <div class="overlay"></div>
                   <div class="text text-center p-4">
-                    <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-                    <span>Web Design</span>
+                    <h3><a href="#">Property Taxation System</a></h3>
+                    <span>Web Application</span>
                   </div>
                 </div>
               </div>
               <div class="col-md-12">
                 <div
                   class="project img ftco-animate d-flex justify-content-center align-items-center"
-                  style="background-image: url(images/project-3.jpg)"
+                  style="background-image: url(images/rcepmall-logo.png)"
                 >
                   <div class="overlay"></div>
                   <div class="text text-center p-4">
-                    <h3><a href="#">Branding &amp; Illustration Design</a></h3>
-                    <span>Web Design</span>
+                    <h3><a href="#">RCEP Mall Web &amp; Mobile Application</a></h3>
+                    <span>Web and Mobile App</span>
                   </div>
                 </div>
               </div>
@@ -798,7 +829,12 @@
                 <span class="icon-map-signs"></span>
               </div>
               <h3 class="mb-4">Address</h3>
-              <p>Yangon, Myanmar</p>
+              <p>
+                <a
+                  href="https://www.google.com/maps/@16.8311437,96.1845218,15z?entry=ttu"
+                  >Yangon, Myanmar</a
+                >
+              </p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -885,7 +921,7 @@
           <div class="col-md-6 d-flex">
             <div
               class="img"
-              style="background-image: url(images/about.jpg)"
+              style="background-image: url(images/mypic.jpg)"
             ></div>
           </div>
         </div>
@@ -898,14 +934,14 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>
-                Innovative and hardworking developer with four years above of
+              <!-- <p>
+                Innovative and hardworking developer with five years of
                 extensive hand on experience in designing and developing web
                 applications from initial to final deliverable. Love learning
                 new technologies and a quick learner. An experienced team player
                 with excellent communication, interpersonal skills, and ability
-                to work independently under pressure.
-              </p>
+                to work independently and under pressure.
+              </p> -->
               <ul
                 class="ftco-footer-social list-unstyled float-md-left float-lft mt-5"
               >
@@ -947,6 +983,11 @@
                   >
                 </li>
                 <li>
+                  <a href="#skills-section"
+                    ><span class="icon-long-arrow-right mr-2"></span>Skills</a
+                  >
+                </li>
+                <li>
                   <a href="#projects-section"
                     ><span class="icon-long-arrow-right mr-2"></span>Projects</a
                   >
@@ -959,7 +1000,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-md">
+          <!-- <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Services</h2>
               <ul class="list-unstyled">
@@ -983,14 +1024,16 @@
                 </li>
               </ul>
             </div>
-          </div>
+          </div> -->
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Have a Questions?</h2>
               <div class="block-23 mb-3">
                 <ul>
                   <li>
-                    <a href="https://www.google.com/maps/@16.8311437,96.1845218,15z?entry=ttu">
+                    <a
+                      href="https://www.google.com/maps/@16.8311437,96.1845218,15z?entry=ttu"
+                    >
                       <span class="icon icon-map-marker"></span
                       ><span class="text">Yangon, Myanmar</span></a
                     >
@@ -1015,15 +1058,11 @@
         <div class="row">
           <div class="col-md-12 text-center">
             <p>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               Copyright &copy;
               <script>
                 document.write(new Date().getFullYear());
               </script>
               All rights reserved
-              <!-- <i class="icon-heart color-danger" aria-hidden="true"></i> by
-              <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
           </div>
         </div>
