edit whatsapp link

--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@
                   ></a>
                 </li>
                 <li class="ftco-animate">
-                  <a href="https://web.whatsapp.com/"
+                  <a href="https://wa.me/959252482969"
                     ><span class="icon-whatsapp"></span
                   ></a>
                 </li>
