--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
                 <span class="icon-phone2"></span>
               </div>
               <h3 class="mb-4">Contact Number</h3>
-              <p><a href="tel://959252482969">+959 252 482 969</a></p>
+              <p><a href="tel:+959252482969">+959 252 482 969</a></p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -1039,7 +1039,7 @@
                     >
                   </li>
                   <li>
-                    <a href="tel://959252482969"
+                    <a href="tel:+959252482969"
                       ><span class="icon icon-phone"></span
                       ><span class="text">+959 252 482 969</span></a
                     >
