--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Portfolio</title>
+    <title>Profile</title>
+    <link rel="icon" type="image/x-icon" href="/images/profile.ico">
     <meta charset="utf-8" />
     <meta
       name="viewport"
