--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Profile</title>
-    <link rel="icon" type="image/x-icon" href="/images/profile.ico">
+    <link rel="icon" type="image/x-icon" href="/images/profile.ico" />
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -551,7 +551,9 @@
           <div class="col-md-4">
             <div
               class="project img ftco-animate d-flex justify-content-center align-items-center"
-              style="background-image: url(images/biz-license-administration.PNG)"
+              style="
+                background-image: url(images/biz-license-administration.PNG);
+              "
             >
               <div class="overlay"></div>
               <div class="text text-center p-4">
@@ -617,7 +619,9 @@
                 >
                   <div class="overlay"></div>
                   <div class="text text-center p-4">
-                    <h3><a href="#">RCEP Mall Web &amp; Mobile Application</a></h3>
+                    <h3>
+                      <a href="#">RCEP Mall Web &amp; Mobile Application</a>
+                    </h3>
                     <span>Web and Mobile App</span>
                   </div>
                 </div>
@@ -881,12 +885,13 @@
 
         <div class="row no-gutters block-9">
           <div class="col-md-6 order-md-last d-flex">
-            <form action="#" class="bg-light p-4 p-md-5 contact-form">
+            <form method="post" class="bg-light p-4 p-md-5 contact-form">
               <div class="form-group">
                 <input
                   type="text"
                   class="form-control"
                   placeholder="Your Name"
+                  id="name"
                 />
               </div>
               <div class="form-group">
@@ -894,15 +899,20 @@
                   type="text"
                   class="form-control"
                   placeholder="Your Email"
+                  id="email"
                 />
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Subject" />
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Subject"
+                  id="subject"
+                />
               </div>
               <div class="form-group">
                 <textarea
-                  name=""
-                  id=""
+                  id="message"
                   cols="30"
                   rows="7"
                   class="form-control"
@@ -911,7 +921,7 @@
               </div>
               <div class="form-group">
                 <input
-                  type="submit"
+                  onclick="sendEmail()"
                   value="Send Message"
                   class="btn btn-primary py-3 px-5"
                 />
@@ -1109,5 +1119,41 @@
     <script src="js/scrollax.min.js"></script>
 
     <script src="js/main.js"></script>
+
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init("fDGWTWiU1alKVx98p");
+      })();
+    </script>
+
+    <script type="text/javascript">
+      function sendEmail() {
+        var params = {
+          name: document.getElementById("name").value,
+          email: document.getElementById("email").value,
+          subject: document.getElementById("subject").value,
+          message: document.getElementById("message").value,
+        };
+
+        const serviceID = "service_f4gayib";
+        const templateID = "template_6be2lom";
+
+        emailjs
+          .send(serviceID, templateID, params)
+          .then((res) => {
+            document.getElementById("name").value = "";
+            document.getElementById("email").value = "";
+            document.getElementById("subject").value = "";
+            document.getElementById("message").value = "";
+            console.log(res);
+            alert("Your message sent successfully");
+          })
+          .catch((err) => console.log(err));
+      }
+    </script>
   </body>
 </html>
