--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
         <div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Our Projects</h2>
+            <h2 class="mb-4">My Projects</h2>
             <p>
               I have developed many types of enterprise projects such as Online
               Business License Registration and Administration System, Household
